--- a/index.html
+++ b/index.html
@@ -18,24 +18,39 @@
 <body>
   <main>
     <div class="card">
-      Equilibrium #3429
+      <a class="linkImage" href="#">
+        <img class="nftImage" src="images/image-equilibrium.jpg" alt="">
+        <span class="overlay"></span>
+      </a>
 
-      Our Equilibrium collection promotes balance and calm.
+      <div class="nftInfo">
+        <a href="#">
+          <h1>Equilibrium #3429</h1>
+        </a>
 
-      0.041 ETH
-      3 days left
+        <p>Our Equilibrium collection promotes balance and calm.</p>
+        <p class="price"><img src="images/icon-ethereum.svg" alt=""> 0.041 ETH</p>
+        <p class="timeLeft"><img src="images/icon-clock.svg" alt=""> 3 days left</p>
+      </div>
 
-      Creation of Jules Wyvern
+      <hr>
+
+      <div class="nftInfo">
+        <p class="createdBy"><img class="avatar" src="images/image-avatar.png" alt=""> Creation of <a
+            href="#"><span>Jules
+              Wyvern</span></a></p>
+      </div>
+
     </div>
-
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Your Name Here</a>.
+    </div>
   </main>
 
 
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+
 </body>
 
 </html>
