added name to attribution

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 <body>
   <main>
     <div class="card">
-      <a class="linkImage" href="#">
+      <a class="linkImage" href="#top">
         <img class="nftImage" src="images/image-equilibrium.jpg" alt="">
         <span class="overlay"></span>
       </a>
 
       <div class="nftInfo">
-        <a href="#">
+        <a href="#top">
           <h1>Equilibrium #3429</h1>
         </a>
 
@@ -37,14 +37,14 @@
 
       <div class="nftInfo">
         <p class="createdBy"><img class="avatar" src="images/image-avatar.png" alt=""> Creation of <a
-            href="#"><span>Jules
+            href="#top"><span>Jules
               Wyvern</span></a></p>
       </div>
 
     </div>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#top">Matt Scott</a>.
     </div>
   </main>
 
