fixed according to feedback on frontend mentor

--- a/index.html
+++ b/index.html
@@ -20,25 +20,31 @@
     <div class="card">
       <a class="linkImage" href="#top">
         <img class="nftImage" src="images/image-equilibrium.jpg" alt="">
-        <span class="overlay"></span>
+
+        <span class="overlay"><img src="images/icon-view.svg" alt="eye icon" class="hoverEye"></span>
       </a>
 
       <div class="nftInfo">
-        <a href="#top">
-          <h1>Equilibrium #3429</h1>
-        </a>
+
+        <h1><a href="#top"></a>Equilibrium #3429</a></h1>
+
 
         <p>Our Equilibrium collection promotes balance and calm.</p>
-        <p class="price"><img src="images/icon-ethereum.svg" alt=""> 0.041 ETH</p>
-        <p class="timeLeft"><img src="images/icon-clock.svg" alt=""> 3 days left</p>
+        <p class="price">
+          0.041 ETH
+        </p>
+        <p class="timeLeft">
+          3 days left
+        </p>
       </div>
 
       <hr>
 
       <div class="nftInfo">
-        <p class="createdBy"><img class="avatar" src="images/image-avatar.png" alt=""> Creation of <a
-            href="#top"><span>Jules
-              Wyvern</span></a></p>
+        <p class="createdBy"><img class="avatar" src="images/image-avatar.png" alt="Image of Jules Wyvern"> Creation of
+          <a href="#top" class="creatorName">Jules
+            Wyvern</a>
+        </p>
       </div>
 
     </div>
