added alt description to nftImage

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <main>
     <div class="card">
       <a class="linkImage" href="#top">
-        <img class="nftImage" src="images/image-equilibrium.jpg" alt="">
+        <img class="nftImage" src="images/image-equilibrium.jpg" alt="nft image">
 
         <span class="overlay"><img src="images/icon-view.svg" alt="eye icon" class="hoverEye"></span>
       </a>
