--- a/index.html
+++ b/index.html
@@ -26,16 +26,17 @@
 
       <div class="nftInfo">
 
-        <h1><a href="#top"></a>Equilibrium #3429</a></h1>
-
+        <h1><a href="#top">Equilibrium #3429</a></h1>
 
         <p>Our Equilibrium collection promotes balance and calm.</p>
+
         <p class="price">
           0.041 ETH
         </p>
         <p class="timeLeft">
           3 days left
         </p>
+
       </div>
 
       <hr>
